# hatlabs

ez_youtube_chat/: Cargo.toml
ez_youtube_chat/src/: main.rs
ez_youtube_chat/src/youtube/: api.rs  mod.rs  tokens.rs
futures_combinators/: Cargo.toml
futures_combinators/src/: combinators.rs  heartbeat_manager.rs  lib.rs  reconnect_manager.rs
gui/: Cargo.toml  build.rs  rust-toolchain.toml
gui/src/: main.rs
hatlabs/: cargo.toml
hatlabs/presentations/: Cargo.toml  index.html
hatlabs/presentations/presentation1/: Cargo.toml
hatlabs/presentations/presentation2/: Cargo.toml  index.html
hatlabs/presentations/presentation3/: Cargo.toml  LICENSE-MIT  README.md  index.scss
hatlabs/presentations/src/: colors.rs  lib.rs
hatlabs/suzi_backend/: .env  Cargo.toml  build.rs
hatlabs/suzi_backend/cdn/: style-b292ab8c8e971fe3.css  suzi_web-15146ad33f349334.js  suzi_web-15146ad33f349334_bg.wasm  suzi_web-39ad944dad4a676a_bg.wasm  suzi_web-61d9e702a193621c.js  suzi_web-61d9e702a193621c_bg.wasm  suzi_web-814bf8572f87350d_bg.wasm  suzi_web-8b9231d0c2757ac1.js  suzi_web-8b9231d0c2757ac1_bg.wasm  suzi_web-94c7b44e855c455b_bg.wasm  suzi_web-c13add21aa85514e_bg.wasm
hatlabs/suzi_backend/src/: main.rs  youtube_schedule.rs
hatlabs/suzi_web/: Cargo.toml  Trunk.toml  index.html  todo.txt
hatlabs/suzi_web/src/: main.rs  routes.rs
leylines/: Cargo.toml
leylines/src/: lib.rs
oozebot/: Cargo.toml  openapi.json
oozebot/crates/oozebot-core/: Cargo.toml
oozebot/crates/oozebot-core/src/: client.rs  client_data.rs  connection.rs  futures.rs  lib.rs  protocols.rs  streams.rs  tasks.rs
oozebot/crates/oozebot-protocol/: Cargo.toml
oozebot/openapi/: Cargo.toml  README.md
oozebot/openapi/.openapi-generator/: FILES
oozebot/openapi/docs/: ActionRowComponentForMessageRequest.md  ActionRowComponentForModalRequest.md  ActionRowComponentResponse.md  BaseCreateMessageCreateRequest.md  BasicGuildMemberResponse.md  BasicMessageResponse.md  BotAddGuildMemberRequest.md  BotPartnerSdkTokenRequest.md  CreateLobbyRequest.md  (+95 more)
rust_sandbox/src/: lib.rs  main.rs
shards/: Cargo.toml  Whitepaper.md
shards/examples/: example.rs  main_thread_io.rs  multi_input_output.rs
shards/src/: graph.rs  lib.rs  process.rs
term_alchemy/: .gitignore  Cargo.toml
term_alchemy/src/: app.rs  lib.rs  main.rs  widget.rs  youtube.rs
term_alchemy/src/youtube/: api.rs  livestream.rs
tts_magic/: .gitignore  Cargo.toml  play_wav_from_db.sh
tts_magic/migrations/: migrate_tts.rs
tts_magic/src/: api.rs  app.rs  audio_input.rs  config.rs  database.rs  lib.rs  llm.rs  main.rs  ocr.rs  screen_capture.rs  sound_player.rs  stt.rs  tts.rs  user_input.rs  vision.rs  youtube.rs  zonos_api.rs  zonos_config.rs
tts_magic/src/tts/tts_providers/: eleven.rs  mod.rs
tts_magic/src/youtube/: api.rs  livechatmessages.rs  livestream.rs
ui_core/: .gitignore  Cargo.toml
ui_core/src/: borders.rs  colors.rs  comms.rs  geometry.rs  inputs.rs  layouts.rs  lib.rs  runtime.rs  style.rs  traits.rs
(+530 files in other folders)
