[package]
name = "term_alchemy"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
dotenv = "0.15.0"
oauth2 = { version = "5.0.0", features = ["reqwest-blocking"] }
open = "5.3.2"
ratatui = "0.29.0"
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
serde = "1.0.219"
serde_json = "1.0.140"
url = "2.5.4"

