[package]
name = "tts_magic"
version = "0.2.0"
edition = "2024"

[[bin]]
name = "migrate_tts"
path = "migrations/migrate_tts.rs"

[dependencies]
derive_builder = "0.20.2"
dotenv = "0.15.0"
log = "0.4.27"
reqwest = { version = "0.12.15", features = ["json"] }
rig-core = "0.12.0"
rodio = "0.20.1"
sanitize-filename = "0.6.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
simplelog = "0.12.2"
time = { version = "0.3.41", features = ["formatting"] }
tokio = { version = "1.44.2", features = ["full"] }
open = "5.3.2"
url = "2.5.4"
oauth2 = { version = "5.0.0", features = ["reqwest"]}
anyhow = "1.0.98"
hound = "3.5.1"
ringbuf = "0.4.8"
base64 = "0.22.1"
tokio-tungstenite = { version = "0.26.2", features = ["rustls-tls-webpki-roots"] }
futures = "0.3.31"
async-stream = "0.3.6"
tokio-stream = "0.1.17"
http = "1.3.1"
chrono = "0.4.41"
xcap = "0.6.2"
fs_extra = "1.3.0"
shards = {git = "file:///home/suziblue/code/shards", branch = "master"}
crossbeam-channel = "0.5.15"
rusqlite = "0.37.0"
