[package]
name = "suzi_backend"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
chrono = "0.4.41"
dotenv = "0.15.0"
env_logger = "0.11.8"
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["full"] }
warp = { version = "0.4.1", features = ["server"] }
