[package]
name = "oozebot-core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
futures-util = "0.3.31"
rand = "0.9.2"
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["test-util", "full"] }
tokio-tungstenite = "0.27.0"
oozebot-protocol = { path = "../oozebot-protocol" }
futures = { version = "0.3.31", features = ["bilock", "unstable"] }
pin-project-lite = "0.2.16"
async-stream = "0.3.6"
tokio-stream = "0.1.17"
tokio-util = "0.7.17"
